--- a/languages/gr.json
+++ b/languages/gr.json
@@ -13,10 +13,10 @@
     "hero_p1": "ΑΝΟΙΧΤΑ ΔΕΥΤΕΡΑ-ΠΑΡΑΣΚΕΥΗ",
     "hero_p2": "6.45ΠΜ - 17.00ΜΜ",
     "hero_cta_text": "Μιλήστε Μαζί Μας Σήμερα",
-    "aboutus_title": "Σχετικά με Εμάς",
+    "aboutus_title": "Ποιοί είμαστε",
     "aboutus_aim": "«Στόχος μας να δημιουργήσουμε ολοκληρωμένες προσωπικότητες... <span>ΑΓΑΠΗ, ΣΕΒΑΣΜΟΣ, ΑΦΟΣΙΩΣΗ</span> σε κάθε παιδί.»",
-    "aboutus_blurb1": "...",
-    "aboutus_blurb2": "...",
+    "aboutus_blurb1": "Καλωσορίσατε  στο βρεφοκομικό – παιδοκομικό σταθμό ολοήμερης  φροντίδας, απασχόλησης και μελέτης  «Phanita’s Baby Club».  Πρόκειται για ένα πρότυπο κέντρο προσχολικής αγωγής και εκπαίδευσης, όπου το παιδί σας θα εκπαιδευτεί κατάλληλα, θα κοινωνικοποιηθεί και θα μπορέσει σιγά σιγά να ενταχθεί στο σύνολο της κοινωνίας πιο εύκολα.",
+    "aboutus_blurb2": "Ο παιδικός σταθμός Phanita’s Baby Club ιδρύθηκε το 2007 με όλες  τις  προδιαγραφές που  απαιτούν  τα σημερινά δεδομένα. Βρισκόμαστε στη περιοχή Άγιος Σύλας, Ύψωνα και ενδιάμεσα στην περιοχή του νέου Νοσοκομείου Λεμεσού και  Κολoσιού. Ο σταθμός ως κυρίως χαρακτηρισμός είναι ένας  χώρος ζωής και εκπαίδευσης. Ένας χώρος που δεν αποτελεί σταθμό για «παρκάρισμα» του παιδιού αλλά  αντίθετα είναι χώρος δημιουργίας και μάθησης, με ένα κλίμα ζεστών ανθρώπινων σχέσεων μεταξύ γονιών – παιδιών – δασκάλων. Ένας χώρος του συνυπάρχω, συνεργάζομαι, δημιουργώ μοιράζομαι, αγαπώ, προσφέρω…",
     "why_us": "Γιατί Εμάς",
     "principles": "Βασικές Αρχές Μας",
     "principles_li1": "Εργασία σε ομάδα",
@@ -29,6 +29,15 @@
     "goals_li1": "Κοινωνικοποίηση",
     "goals_li2": "Αμοιβαίος σεβασμός",
     "care_h3": "Φροντίδα & Εκπαίδευση των μικρών μας φίλων",
+
+    "care_li1":"ανταποκρίνεται στις ανάγκες  ασφάλειας, στοργής, αγάπης…",
+    "care_li2":"ψυχαγωγικές δραστηριότητες  ( ομαδική συνεργασία )",
+    "care_li3": "ανάπτυξη δημιουργικότητας  έκφρασης ( νοητικά και ικανοτήτων)",
+    "care_li4":"ελεύθερο και δημιουργικό παιγνίδι",
+    "care_li5":"ανάπτυξη πρωτοβουλίας και ανεξαρτητοποίησης",
+    "care_li6": "σεβασμός στην πολιτιστική  και  θρησκευτική ταυτότητα του καθενός",
+    "care_li7":"να μπορεί να συναναστρέφεται με όλους τους ανθρώπους ( μικρούς – μεγάλους)….",
+
     "our_classes": "Τα Τμήματά Μας",
     "class1_age": "4 Μηνών - 2 Ετών",
     "class2_age": "2-3 Ετών",
@@ -40,6 +49,10 @@
     "quick_gallery": "Φωτογραφίες",
     "quick_classes": "Τμήματα & Εκπαιδευτικοί",
     "quick_contact": "Επικοινωνήστε Μαζί Μας",
-    "follow_us": "Ακολουθήστε Μας"
+    "follow_us": "Ακολουθήστε Μας",
+    "address": " Αριστοτέλους 11, Άγιος Σύλας  4193, Ύψωνας, Λεμεσός",
+    "email": "phanita2008@hotmail.com",
+    "phone": "(00357) 99 578 375",
+    "working_hours": "Δευ - Παρ: 06:45 - 17:00"
   }
   
