Updated styles on contact from and date script on footer

--- a/languages/en.json
+++ b/languages/en.json
@@ -7,7 +7,7 @@
     "english": "English",
     "greek": "Greek",
     "call_us": "CALL US",
-    "welcome_message": "Welcome to Phanitas Baby Club",
+    "welcome_message": "Welcome to Phanita's Baby Club",
     "hero_txt1": "Looking for a second place so your child feels like at home?",
     "hero_txt2": "Our Baby club offers all the safety and tenderness your child can find at home",
     "hero_p1": "OPEN MONDAY-FRIDAY",
