--- a/languages/en.json
+++ b/languages/en.json
@@ -53,6 +53,20 @@
     "address": "11 Aristotelous Street, Agios Sylas 4193, Ypsonas, Limassol",
     "email": "phanita2008@hotmail.com",
     "phone": "(00357) 99 578 375",
-    "working_hours": "Mon - Fri: 06:45 - 17:00"
+    "working_hours": "Mon - Fri: 06:45 - 17:00",
+    "contact_get_in_touch": "Get In Touch",
+    "contact_description": "Have any questions? You can contact us by filling in the form below, and soon you will get a reply.",
+    "contact_our_address": "Our Address",
+    "contact_our_info": "Our Contact Information",
+    "form_contact_us": "Contact Us",
+    "form_label_name": "Name:",
+    "form_label_email": "Email:",
+    "form_label_subject": "Subject:",
+    "form_label_message": "Message:",
+    "form_placeholder_name": "Your name",
+    "form_placeholder_email": "Your email",
+    "form_placeholder_subject": "Subject",
+    "form_placeholder_message": "Write your message here",
+    "form_send_message": "Send your message"
   }
   
