Added class pages and updated styles

--- a/languages/en.json
+++ b/languages/en.json
@@ -2,7 +2,7 @@
     "home": "Home",
     "school": "Our School",
     "gallery": "Gallery",
-    "teachers-classes": "Teachers & Classes",
+    "teachers-classes": "Classes",
     "contact_us": "Contact Us",
     "english": "English",
     "greek": "Greek",
