--- a/languages/gr.json
+++ b/languages/gr.json
@@ -2,7 +2,7 @@
     "home": "ΑΡΧΙΚΗ",
     "school": "Το Σχολείο Μας",
     "gallery": "Φωτογραφίες",
-    "teachers-classes": "Δάσκαλοι & Τμήματα",
+    "teachers-classes": "Τμήματα",
     "contact_us": "Επικοινωνία",
     "english": "Αγγλικά",
     "greek": "Ελληνικά",
