Added translations and styles to classes pages

--- a/languages/en.json
+++ b/languages/en.json
@@ -46,8 +46,8 @@
     "get_in_touch": "Get in Touch",
     "quick_links": "Quick Links",
     "quick_school": "Our School",
-    "quick_gallery": "Gallery",
-    "quick_classes": "Classes and Teachers",
+   
+    "quick_classes": "Classes",
     "quick_contact": "Contact Us",
     "follow_us": "Follow Us",
     "address": "11 Aristotelous Street, Agios Sylas 4193, Ypsonas, Limassol",
@@ -67,6 +67,66 @@
     "form_placeholder_email": "Your email",
     "form_placeholder_subject": "Subject",
     "form_placeholder_message": "Write your message here",
-    "form_send_message": "Send your message"
-  }
+    "form_send_message": "Send your message",
+    "our_school_title": "Our School",
+    "our_school_subtitle": "Exploring and Playing Safely: Our Outdoor Spaces",
+    "our_school_paragraph1": "At our kindergarten, we believe in the importance of outdoor play for toddlers. Our spacious school yard is designed to encourage curiosity, creativity, and physical activity. Whether it’s climbing, running, or engaging in imaginative games, the children are free to explore, interact, and enjoy the fresh air in a safe and secure environment.",
+    "our_school_paragraph2": "To ensure their safety, the entire outdoor area is equipped with soft, safety flooring and features games and equipment that are age-appropriate, so little ones can play freely without worries. We’ve created a nurturing space where children can thrive, learn, and develop important social and motor skills while staying safe and protected.",
+    "classroom_title": "Creative Play in a Safe Classroom",
+    "classroom_paragraph": "Our classroom is a space for children to explore, create, and imagine. With a safe wooden floor, kids can move freely as they engage in imaginative play, focused activities, and creative projects. The environment is designed to foster creativity and confidence, allowing children to play safely and discover new possibilities every day.",
+    "schedule_title": "Work Hours & Timetable",
+    "schedule_paragraph1": "Our school operates from Monday to Friday, 6:30 AM to 5:00 PM, with an afternoon study and activities program from 1:30 PM to 5:00 PM.",
+    "schedule_paragraph2": "Children must arrive no later than 8:30 AM to ensure smooth implementation of the daily curriculum.",
+    "schedule_paragraph3": "During the summer months (June, July, and the first two weeks of August), our school remains open for continued learning and play.",
+    "calendar_title": "Calendar",
+    "calendar_download": "Download Calendar",
+    "health_title": "Nutrition & Ηealth",
+    "meals_title": "Meals",
+    "meals_paragraph": "Once your little one turns one, they’ll enjoy a delicious, freshly cooked lunch every day, made right in our school kitchen. We also make sure to offer fresh fruit daily to keep them healthy and energized!",
+    "classes_title": "Our Classes",
+    "classes_intro1": "At our school, we offer a nurturing and structured environment through small-member departments tailored to each developmental stage.",
+    "classes_intro2": "Our class sections are thoughtfully organized by age to ensure that every child receives personalized attention and age-appropriate learning experiences:",
+    "class_infant": "Infant Section (4 months – 2 years)",
+    "class_2_3": "2–3 Year Old Section",
+    "class_3_4": "3–4 Year Old Section",
+    "class_4_5": "4–5 Year Old Section",
+    "classes_note": "* The 3–4 and 4–5 year old groups often share activities and learning spaces, fostering collaboration and social development.",
+    "support_title": "Support & Care",
+    "support_intro": "In addition to our teaching staff, we’re supported by a caring and professional team that helps create a safe and enriching learning environment:",
+    "support_cleaning": "A dedicated cleaning assistant ensuring cleanliness and hygiene",
+    "support_specialists": "A speech therapist and special education professional who visit regularly and collaborate closely with our team",
+    "support_doctor": "A partnering pediatrician available when needed to support the well-being of our children",
+    "support_final": "We’re proud to provide a caring, holistic approach to early childhood education where every child is seen, supported, and celebrated.",
+    "baby_title": "Our Baby Class: Safe, Stimulating, and Comfortable for Your Little One",
+    "baby_intro": "In this section, we provide a nurturing environment for babies from four months to two years old, ensuring that every child feels safe, happy, and cared for. Our space is thoughtfully designed to support your baby's growth and development with:",
+    "baby_list_1": "A specially designed area for infants, tailored to their unique needs",
+    "baby_list_2": "Soft, safety-approved flooring to ensure comfort and protection",
+    "baby_list_3": "Age-appropriate toys that encourage curiosity and play",
+    "baby_list_4": "Musical movement activities to promote rhythm and coordination",
+    "baby_list_5": "Fun exercises and children’s rhythms to help your baby develop motor skills",
+    "baby_list_6": "A personal bed for each infant, ensuring rest and relaxation",
+    "baby_list_7": "Specially designed chairs for comfortable seating",
+    "baby_note": "<strong>Sheets and blankets are provided by the station for your convenience and peace of mind.</strong>",
+    "three_four_title": "Our 3–4 & 4–5 Year-Old Class: Exploring, Creating, and Growing",
+    "three_four_intro": "In this section, we offer an engaging environment where your child can begin to explore their creativity, learn new skills, and develop a deeper understanding of the world around them. Our activities are designed to nurture their cognitive, physical, and social growth, including:",
+    "three_four_list_1": "Painting to foster creativity and fine motor skills",
+    "three_four_list_2": "Working with clay to enhance tactile exploration and hand-eye coordination",
+    "three_four_list_3": "Adhesive crafts to build fine motor skills and creativity",
+    "three_four_list_4": "Fairy tales – audiovisual stories from CDs and DVDs to spark imagination",
+    "three_four_list_5": "Puppet shows that encourage storytelling and imaginative play",
+    "three_four_list_6": "Music with movement to develop rhythm, coordination, and expression",
+    "three_four_list_7": "Gymnastics and dance to enhance physical strength, flexibility, and balance",
+    "three_four_list_8": "Poems that develop language and listening skills",
+    "three_four_list_9": "Introduction to basic cuisine skills through fun cooking activities",
+    "three_four_list_10": "Basic English to begin language development and communication",
+    "three_four_list_11": "Computer activities to encourage basic digital literacy and learning",
+    "three_four_list_12": "Educational and free play games that promote critical thinking and creativity",
+    "three_four_list_13": "Imitation games that support social and cognitive development",
+    "three_four_list_14": "Portfolio creation to track progress and encourage self-expression",
+    "three_four_list_15": "Early writing activities to develop literacy skills",
+    "three_four_list_16": "Books to foster a love of reading and storytelling",
+    "three_four_list_17": "And many more seasonal activities designed to keep your child engaged and learning"  
+    }
+    
+  
   
