--- a/languages/gr.json
+++ b/languages/gr.json
@@ -46,7 +46,6 @@
     "get_in_touch": "Επικοινωνία",
     "quick_links": "Γρήγορες Συνδέσεις",
     "quick_school": "Το Σχολείο Μας",
-    "quick_gallery": "Φωτογραφίες",
     "quick_classes": "Τμήματα & Εκπαιδευτικοί",
     "quick_contact": "Επικοινωνήστε Μαζί Μας",
     "follow_us": "Ακολουθήστε Μας",
@@ -68,6 +67,68 @@
     "form_placeholder_email": "Το email σας",
     "form_placeholder_subject": "Θέμα",
     "form_placeholder_message": "Γράψτε το μήνυμά σας εδώ",
-    "form_send_message": "Αποστολή μηνύματος"
-  }
+    "form_send_message": "Αποστολή μηνύματος",
+    "our_school_title": "Το Σχολείο μας",
+    "our_school_subtitle": "Ασφαλές Παιχνίδι & Εξερεύνηση: Οι Υπαίθριοι Χώροι μας",
+    "our_school_paragraph1": "Στο νηπιαγωγείο μας, πιστεύουμε στη σημασία του υπαίθριου παιχνιδιού για τα παιδιά προσχολικής ηλικίας. Η ευρύχωρη αυλή μας είναι σχεδιασμένη για να ενθαρρύνει την περιέργεια, τη δημιουργικότητα και τη σωματική δραστηριότητα. Είτε πρόκειται για σκαρφάλωμα, τρέξιμο ή συμμετοχή σε φανταστικά παιχνίδια, τα παιδιά είναι ελεύθερα να εξερευνήσουν, να αλληλεπιδράσουν και να απολαύσουν τον καθαρό αέρα σε ένα ασφαλές και προστατευμένο περιβάλλον.",
+    "our_school_paragraph2": "Για να διασφαλίσουμε την ασφάλειά τους, όλη η υπαίθρια περιοχή είναι εξοπλισμένη με μαλακό δάπεδο ασφαλείας και περιλαμβάνει παιχνίδια και εξοπλισμό κατάλληλο για την ηλικία τους, ώστε τα μικρά παιδιά να παίζουν ελεύθερα χωρίς ανησυχία. Έχουμε δημιουργήσει έναν υποστηρικτικό χώρο όπου τα παιδιά μπορούν να ευδοκιμήσουν, να μάθουν και να αναπτύξουν σημαντικές κοινωνικές και κινητικές δεξιότητες με ασφάλεια και προστασία.",
+    "classroom_title": "Δημιουργικό Παιχνίδι σε Ασφαλή Τάξη",
+    "classroom_paragraph": "Η τάξη μας είναι ένας χώρος όπου τα παιδιά μπορούν να εξερευνήσουν, να δημιουργήσουν και να φανταστούν. Με ξύλινο δάπεδο ασφαλείας, τα παιδιά μπορούν να κινούνται ελεύθερα καθώς ασχολούνται με φανταστικό παιχνίδι, στοχευμένες δραστηριότητες και δημιουργικά έργα. Το περιβάλλον είναι σχεδιασμένο για να ενισχύει τη δημιουργικότητα και την αυτοπεποίθηση, επιτρέποντας στα παιδιά να παίζουν με ασφάλεια και να ανακαλύπτουν νέες δυνατότητες κάθε μέρα.",
+    "schedule_title": "Ώρες Λειτουργίας & Πρόγραμμα",
+    "schedule_paragraph1": "Το σχολείο μας λειτουργεί από Δευτέρα έως Παρασκευή, 6:30 π.μ. έως 5:00 μ.μ., με απογευματινό πρόγραμμα μελέτης και δραστηριοτήτων από 1:30 μ.μ. έως 5:00 μ.μ.",
+    "schedule_paragraph2": "Τα παιδιά πρέπει να φτάνουν το αργότερο μέχρι τις 8:30 π.μ. για να διασφαλιστεί η ομαλή υλοποίηση του ημερήσιου προγράμματος.",
+    "schedule_paragraph3": "Κατά τους θερινούς μήνες (Ιούνιος, Ιούλιος και τις πρώτες δύο εβδομάδες του Αυγούστου), το σχολείο μας παραμένει ανοιχτό για συνεχή μάθηση και παιχνίδι.",
+    "calendar_title": "Ημερολόγιο",
+    "calendar_download": "Λήψη Ημερολογίου",
+    "health_title": "Διατροφή & Υγεία",
+    "meals_title": "Γεύματα",
+    "meals_paragraph": "Μόλις το παιδί σας κλείσει τον πρώτο του χρόνο, θα απολαμβάνει καθημερινά ένα νόστιμο, φρεσκομαγειρεμένο μεσημεριανό γεύμα, φτιαγμένο στην κουζίνα του σχολείου μας. Επίσης, προσφέρουμε καθημερινά φρέσκα φρούτα για να διατηρούμε τα παιδιά υγιή και γεμάτα ενέργεια!",
+    "classes_title": "Τα Τμήματά μας",
+    "classes_intro1": "Στο σχολείο μας προσφέρουμε ένα υποστηρικτικό και οργανωμένο περιβάλλον μέσω μικρών τμημάτων προσαρμοσμένων σε κάθε αναπτυξιακό στάδιο.",
+    "classes_intro2": "Τα τμήματά μας είναι προσεκτικά οργανωμένα ανά ηλικία για να διασφαλίζεται ότι κάθε παιδί λαμβάνει εξατομικευμένη προσοχή και εμπειρίες μάθησης κατάλληλες για την ηλικία του:",
+    "class_infant": "Τμήμα Βρεφών (4 μηνών – 2 ετών)",
+    "class_2_3": "Τμήμα 2–3 Ετών",
+    "class_3_4": "Τμήμα 3–4 Ετών",
+    "class_4_5": "Τμήμα 4–5 Ετών",
+    "classes_note": "* Τα τμήματα 3–4 και 4–5 ετών συχνά μοιράζονται δραστηριότητες και μαθησιακούς χώρους, ενισχύοντας τη συνεργασία και την κοινωνική ανάπτυξη.",
+    "support_title": "Υποστήριξη & Φροντίδα",
+    "support_intro": "Εκτός από το διδακτικό προσωπικό, υποστηριζόμαστε από μια φροντισμένη και επαγγελματική ομάδα που συμβάλλει στη δημιουργία ενός ασφαλούς και εμπλουτισμένου μαθησιακού περιβάλλοντος:",
+    "support_cleaning": "Ένας αφοσιωμένος βοηθός καθαριότητας διασφαλίζει την καθαριότητα και υγιεινή",
+    "support_specialists": "Ένας λογοθεραπευτής και ένας ειδικός στην ειδική αγωγή επισκέπτονται τακτικά και συνεργάζονται στενά με την ομάδα μας",
+    "support_doctor": "Συνεργαζόμενος παιδίατρος είναι διαθέσιμος όταν χρειαστεί για την υποστήριξη της ευεξίας των παιδιών μας",
+    "support_final": "Είμαστε υπερήφανοι που προσφέρουμε μια φροντιστική, ολιστική προσέγγιση στην προσχολική εκπαίδευση όπου κάθε παιδί γίνεται αντιληπτό, υποστηρίζεται και γιορτάζεται.",
+    "baby_title": "Το Τμήμα Βρεφών: Ασφαλές, Ερεθιστικό και Άνετο για το Μωρό σας",
+    "baby_intro": "Σε αυτό το τμήμα, προσφέρουμε ένα φροντισμένο περιβάλλον για βρέφη από τεσσάρων μηνών έως δύο ετών, διασφαλίζοντας ότι κάθε παιδί αισθάνεται ασφαλές, χαρούμενο και περιποιημένο. Ο χώρος μας είναι προσεκτικά σχεδιασμένος για να υποστηρίζει την ανάπτυξη του μωρού σας με:",
+    "baby_list_1": "Έναν ειδικά διαμορφωμένο χώρο για βρέφη, προσαρμοσμένο στις μοναδικές τους ανάγκες",
+    "baby_list_2": "Μαλακό, πιστοποιημένο δάπεδο για άνεση και προστασία",
+    "baby_list_3": "Παιχνίδια κατάλληλα για την ηλικία που ενθαρρύνουν την περιέργεια και το παιχνίδι",
+    "baby_list_4": "Μουσικές δραστηριότητες κίνησης για την ανάπτυξη ρυθμού και συντονισμού",
+    "baby_list_5": "Διασκεδαστικές ασκήσεις και παιδικά ρυθμικά παιχνίδια για την ανάπτυξη κινητικών δεξιοτήτων",
+    "baby_list_6": "Ατομικό κρεβάτι για κάθε βρέφος για ξεκούραση και χαλάρωση",
+    "baby_list_7": "Ειδικά σχεδιασμένες καρέκλες για άνετο κάθισμα",
+    "baby_note": "<strong>Τα σεντόνια και οι κουβέρτες παρέχονται από τον σταθμό για τη δική σας ευκολία και ηρεμία.</strong>", 
+    "three_four_title": "Τάξη 3–4 & 4–5 Ετών: Εξερεύνηση, Δημιουργία και Ανάπτυξη",
+    "three_four_intro": "Σε αυτή την ενότητα προσφέρουμε ένα εμπλουτισμένο περιβάλλον όπου το παιδί σας μπορεί να αρχίσει να αναπτύσσει τη δημιουργικότητά του, να μαθαίνει νέες δεξιότητες και να κατανοεί τον κόσμο γύρω του. Οι δραστηριότητες έχουν σχεδιαστεί για να ενισχύσουν τη γνωστική, σωματική και κοινωνική του ανάπτυξη, όπως:",
+    "three_four_list_1": "Ζωγραφική για ενίσχυση της δημιουργικότητας και της λεπτής κινητικότητας",
+    "three_four_list_2": "Πηλός για ανάπτυξη αφής και συντονισμού χεριού-ματιού",
+    "three_four_list_3": "Κατασκευές με κόλλες για δημιουργικότητα και δεξιότητες λεπτών κινήσεων",
+    "three_four_list_4": "Παραμύθια – οπτικοακουστικές ιστορίες από CDs και DVDs που ενισχύουν τη φαντασία",
+    "three_four_list_5": "Κουκλοθέατρο που ενθαρρύνει την αφήγηση και το δημιουργικό παιχνίδι",
+    "three_four_list_6": "Μουσικοκινητικές δραστηριότητες για ρυθμό, συντονισμό και έκφραση",
+    "three_four_list_7": "Γυμναστική και χορός για ενίσχυση της φυσικής κατάστασης και ευλυγισίας",
+    "three_four_list_8": "Ποιήματα για ανάπτυξη της γλώσσας και της ακουστικής κατανόησης",
+    "three_four_list_9": "Γνωριμία με βασικές δεξιότητες κουζίνας μέσα από διασκεδαστικές δραστηριότητες",
+    "three_four_list_10": "Εισαγωγή στα βασικά Αγγλικά για ανάπτυξη επικοινωνίας",
+    "three_four_list_11": "Δραστηριότητες στον υπολογιστή για βασικό ψηφιακό γραμματισμό",
+    "three_four_list_12": "Εκπαιδευτικά και ελεύθερα παιχνίδια που ενισχύουν τη σκέψη και τη δημιουργικότητα",
+    "three_four_list_13": "Παιχνίδια μίμησης για κοινωνική και γνωστική ανάπτυξη",
+    "three_four_list_14": "Δημιουργία portfolio για παρακολούθηση προόδου και αυτοέκφραση",
+    "three_four_list_15": "Ασκήσεις πρώτης γραφής για ενίσχυση της γραμματιστικής ικανότητας",
+    "three_four_list_16": "Βιβλία για ενίσχυση της αγάπης για το διάβασμα και την αφήγηση",
+    "three_four_list_17": "Και πολλές ακόμη εποχιακές δραστηριότητες που διατηρούν το παιδί σε ενδιαφέρον και μάθηση"
+      
+      
+}
+    
+  
   
