Added alt to images and closed open links

--- a/languages/en.json
+++ b/languages/en.json
@@ -11,7 +11,7 @@
     "hero_txt1": "Looking for a second place so your child feels like at home?",
     "hero_txt2": "Our Baby club offers all the safety and tenderness your child can find at home",
     "hero_p1": "OPEN MONDAY-FRIDAY",
-    "hero_p2": "6.45AM - 17.00PM",
+    "hero_p2": "6.45am - 17.00pm",
     "hero_cta_text": "Talk to Us Today",
     "aboutus_title": "About Us",
     "aboutus_aim": "“Aiming to create complete people with strong personalities. And above all <span>LOVE, RESPECT, DEDICATION</span> to each child.”",
@@ -63,11 +63,11 @@
     "form_label_email": "Email:",
     "form_label_subject": "Subject:",
     "form_label_message": "Message:",
+    "form_send_message": "Send your message",
     "form_placeholder_name": "Your name",
     "form_placeholder_email": "Your email",
     "form_placeholder_subject": "Subject",
     "form_placeholder_message": "Write your message here",
-    "form_send_message": "Send your message",
     "our_school_title": "Our School",
     "our_school_subtitle": "Exploring and Playing Safely: Our Outdoor Spaces",
     "our_school_paragraph1": "At our kindergarten, we believe in the importance of outdoor play for toddlers. Our spacious school yard is designed to encourage curiosity, creativity, and physical activity. Whether it’s climbing, running, or engaging in imaginative games, the children are free to explore, interact, and enjoy the fresh air in a safe and secure environment.",
