--- a/languages/gr.json
+++ b/languages/gr.json
@@ -11,7 +11,7 @@
     "hero_txt1": "Ψάχνετε ένα δεύτερο σπίτι για το παιδί σας;",
     "hero_txt2": "Το Baby Club μας προσφέρει ασφάλεια και τρυφερότητα σαν το σπίτι",
     "hero_p1": "ΑΝΟΙΧΤΑ ΔΕΥΤΕΡΑ-ΠΑΡΑΣΚΕΥΗ",
-    "hero_p2": "6.45ΠΜ - 17.00ΜΜ",
+    "hero_p2": "6.45πμ - 17.00μμ",
     "hero_cta_text": "Μιλήστε Μαζί Μας Σήμερα",
     "aboutus_title": "Ποιοί είμαστε",
     "aboutus_aim": "«Στόχος μας να δημιουργήσουμε ολοκληρωμένες προσωπικότητες... <span>ΑΓΑΠΗ, ΣΕΒΑΣΜΟΣ, ΑΦΟΣΙΩΣΗ</span> σε κάθε παιδί.»",
@@ -58,16 +58,16 @@
     "contact_description": "Έχετε απορίες; Μπορείτε να επικοινωνήσετε μαζί μας συμπληρώνοντας την παρακάτω φόρμα και σύντομα θα λάβετε απάντηση.",
     "contact_our_address": "Η Διεύθυνσή Μας",
     "contact_our_info": "Στοιχεία Επικοινωνίας",
-    "form_contact_us": "Επικοινωνία",
+    "form_contact_us": "Επικοινωνήστε μαζί μας",
     "form_label_name": "Όνομα:",
-    "form_label_email": "Ηλεκτρονική Διεύθυνση:",
+    "form_label_email": "Ηλ. ταχυδρομείο:",
     "form_label_subject": "Θέμα:",
     "form_label_message": "Μήνυμα:",
+    "form_send_message": "Στείλτε το μήνυμά σας",
     "form_placeholder_name": "Το όνομά σας",
     "form_placeholder_email": "Το email σας",
     "form_placeholder_subject": "Θέμα",
     "form_placeholder_message": "Γράψτε το μήνυμά σας εδώ",
-    "form_send_message": "Αποστολή μηνύματος",
     "our_school_title": "Το Σχολείο μας",
     "our_school_subtitle": "Ασφαλές Παιχνίδι & Εξερεύνηση: Οι Υπαίθριοι Χώροι μας",
     "our_school_paragraph1": "Στο νηπιαγωγείο μας, πιστεύουμε στη σημασία του υπαίθριου παιχνιδιού για τα παιδιά προσχολικής ηλικίας. Η ευρύχωρη αυλή μας είναι σχεδιασμένη για να ενθαρρύνει την περιέργεια, τη δημιουργικότητα και τη σωματική δραστηριότητα. Είτε πρόκειται για σκαρφάλωμα, τρέξιμο ή συμμετοχή σε φανταστικά παιχνίδια, τα παιδιά είναι ελεύθερα να εξερευνήσουν, να αλληλεπιδράσουν και να απολαύσουν τον καθαρό αέρα σε ένα ασφαλές και προστατευμένο περιβάλλον.",
